fix jumpy hover effects and refactor solutions cards on down

--- a/client/sass/_coreValues.scss
+++ b/client/sass/_coreValues.scss
@@ -18,7 +18,7 @@
       }
 
       h1 {
-        width: 90%;
+        width: 95%;
 
         @media only screen and (max-width: $desktop) {
           width: 100%;
@@ -99,14 +99,36 @@
           @include flex(row);
           background: $white;
           font-family: $poppins;
+          min-height: 103px;
+          margin-bottom: 20px;
           padding: 24px;
           border-radius: 4px;
           box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
-          margin-bottom: 20px;
+
+          @media only screen and (max-width: 1192px) {
+            min-height: 123px;
+          }
+
+          @media only screen and (max-width: 1151px) {
+            min-height: 103px;
+          }
+
+          @media only screen and (max-width: 1148px) {
+            min-height: 123px;
+          }
+
+          @media only screen and (max-width: 1109px) {
+            min-height: 103px;
+          }
+
+          @media only screen and (max-width: 1049px) {
+            min-height: 123px;
+          }
 
           @media only screen and (max-width: $desktop) {
             @include flex;
             margin-bottom: 24px;
+            min-height: 100%;
           }
 
           @media only screen and (max-width: $tablet) {
